--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ i            <div class="relative mx-auto w-full max-w-lg rounded-xl overflow-hi
         <div class="container mx-auto px-4">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="mb-6 md:mb-0">
-                    <h3 class="text-xl font-bold mb-2">[Nama Brand]</h3>
+                    <h3 class="text-xl font-bold mb-2">Yusma Lotion</h3>
                     <p class="text-gray-400">Skincare terbaik dengan formula Korea</p>
                 </div>
                 
@@ -391,7 +391,7 @@ i            <div class="relative mx-auto w-full max-w-lg rounded-xl overflow-hi
             </div>
             
             <div class="border-t border-gray-800 mt-6 pt-6 text-center text-sm text-gray-400">
-                <p>© 2023 [Nama Brand]. All rights reserved.</p>
+                <p>© 2023 Yusma Lotion. All rights reserved.</p>
                 <p class="mt-2">Hasil dapat bervariasi pada setiap individu. Produk telah terdaftar di BPOM RI.</p>
             </div>
         </div>
