--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ i            <div class="relative mx-auto w-full max-w-lg rounded-xl overflow-hi
                 </div>
                 
                 <!-- CTA Button -->
-                <a href="https://wa.me/628xxxxxxxxxx?text=Halo,%20saya%20mau%20order%20[Nama%20Produk]" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-bold py-4 px-8 rounded-full text-lg transition duration-300 transform hover:scale-105 shadow-lg">
+                <a href="https://wa.me/6281958436679?text=Halo,%20saya%20mau%20order%20[Nama%20Produk]" class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-bold py-4 px-8 rounded-full text-lg transition duration-300 transform hover:scale-105 shadow-lg">
                     <i class="fab fa-whatsapp mr-2"></i> PESAN SEKARANG
                 </a>
             </div>
@@ -341,7 +341,7 @@ i            <div class="relative mx-auto w-full max-w-lg rounded-xl overflow-hi
         <div class="container mx-auto px-4 text-center">
             <h2 class="text-2xl font-bold mb-6">Masih Ragu? Coba Dulu Ukuran Travel Size!</h2>
             <p class="text-gray-600 mb-8 max-w-2xl mx-auto">Dapatkan ukuran travel 15ml dengan harga spesial Rp 49.000 (sudah termasuk ongkir)</p>
-            <a href="https://wa.me/628xxxxxxxxxx?text=Halo,%20saya%20mau%20order%20[Nama%20Produk]%20ukuran%20travel" class="inline-block bg-pink-500 hover:bg-pink-600 text-white font-bold py-3 px-6 rounded-full text-lg transition duration-300">
+            <a href="https://wa.me/6281958436679?text=Halo,%20saya%20mau%20order%20[Nama%20Produk]%20ukuran%20travel" class="inline-block bg-pink-500 hover:bg-pink-600 text-white font-bold py-3 px-6 rounded-full text-lg transition duration-300">
                 Order Travel Size
             </a>
         </div>
